--- a/css/custom.css
+++ b/css/custom.css
@@ -115,7 +115,12 @@ form{
 	padding: 3em 0;
 }
 
-
+/*Google map*/
+ #map {
+   width: 100%;
+   height: 400px;
+   background-color: grey;
+ }
 
 
 /* FOOTER */
