--- a/css/custom.css
+++ b/css/custom.css
@@ -27,7 +27,7 @@ nav, nav aside a{
 /* HERO */
 
 
-.hero #tsa{
+#tsa{
 	width: 70%;
 	display: block;
 	margin: left;
@@ -54,6 +54,18 @@ nav, nav aside a{
 	color: white;
 	-webkit-text-stroke: 0.5px #5a4b42;
 	padding-top: 0.3em;
+}
+
+@media screen and (min-width: 640px){
+	.hero .medium-8{
+		padding-top: 10%;
+	}
+}
+
+@media screen and (max-width: 640px){
+	.hero .medium-8{
+		padding-left: 1em;
+	}
 }
 
 .hero h3{
