--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,7 @@ nav, nav aside a{
 }
 
 .hero{
-	background-image: url(../img/brushes.jpeg);
+	background-image: url(../img/crafts.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center 75%;
