--- a/css/custom.css
+++ b/css/custom.css
@@ -21,18 +21,25 @@ nav, .tab-bar, .menu-icon, .left-off-canvas-menu, .top-bar-section li:not(.has-f
 nav, nav aside a{
 	font-family: 'Raleway', sans-serif;
 }
-
+.top-bar-section ul li > a{
+	font-family:'Raleway', sans-serif;
+}
 
 
 /* HERO */
 
 
 #tsa{
-	
 	display: block;
 	margin: left;
 	fill: #5a4b42;
 }
+
+.hero svg{
+	width: 50%;
+	margin-left: 1em;
+}
+
 
 .hero{
 	background-image: url(../img/crafts.jpg);
@@ -45,7 +52,7 @@ nav, nav aside a{
 }
 
 .hero .columns{
-	padding: 3em 0;
+	
 	
 }
 
@@ -56,23 +63,22 @@ nav, nav aside a{
 	padding-top: 0.3em;
 }
 
-@media screen and (min-width: 640px){
-	.hero .medium-8{
-		padding-top: 10%;
-	}
-}
 
-@media screen and (max-width: 640px){
-	.hero .medium-8{
-		padding-left: 1em;
-	}
-}
 
 .hero h3{
 	color: #5a4b42;
 }
 
-
+@media screen and (min-width: 640px){
+	.hero svg{
+		margin: none;
+		width: 100%;
+	}
+	.hero h1{
+		margin-top: 1em;
+	}
+}
+	
 
 /* CONTENT */
 
@@ -110,6 +116,19 @@ p{
 	color: #698c80;
 }
 
+.main-content ul{
+	list-style: none;
+}
+
+.home-main .fa{
+	color: #6acce0;
+	margin: auto;
+}
+
+.home-main .linked-pages{
+	background-color: rgba(207, 230, 187, 0.5);
+}
+
 .breadcrumbs{
 	background-color: rgba(207, 230, 187, 0.5);
 }
@@ -133,6 +152,11 @@ p{
 	padding: 0.3em;
 	font-family: 'Raleway', sans-serif;
 }
+
+.tutorials li{
+	padding: 2%;
+}
+
 
 .button{
 	background-color: #6acce0;
