--- a/css/custom.css
+++ b/css/custom.css
@@ -127,6 +127,19 @@ p{
 	margin-bottom: 5%;
 }
 
+.home-main #map {
+   width: 100%;
+   background-color: grey;
+   margin-bottom: 5%;
+ } 
+
+@media screen and (min-width: 640px){
+	.home-main #map{
+		width: 100%;
+		height: 15em;
+	}
+}
+
 .home-main .fa{
 	color: #6acce0;
 	margin: auto;
