--- a/css/custom.css
+++ b/css/custom.css
@@ -128,8 +128,9 @@ p{
 }
 
 .home-main #map {
-   width: 100%;
+   width: 70%;
    background-color: grey;
+   margin: auto;
    margin-bottom: 5%;
  } 
 
